crates/carta/tests/snapshots/golden_e2e__tsv__commonmark__empty-fields.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<table>
<thead>
<tr>
<th>left</th>
<th>right</th>
</tr>
</thead>
<tbody>
<tr>
<td>x</td>
<td></td>
</tr>
<tr>
<td></td>
<td>y</td>
</tr>
</tbody>
</table>
