crates/carta/tests/snapshots/golden_e2e__tsv__commonmark__literal-quotes.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<table>
<thead>
<tr>
<th>note</th>
<th>detail</th>
</tr>
</thead>
<tbody>
<tr>
<td>"quotes" stay literal</td>
<td>comma, stays too</td>
</tr>
</tbody>
</table>
