crates/carta/tests/snapshots/golden_e2e__tsv__commonmark__ragged.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<table>
<thead>
<tr>
<th>a</th>
<th>b</th>
<th>c</th>
</tr>
</thead>
<tbody>
<tr>
<td>1</td>
<td>2</td>
<td></td>
</tr>
<tr>
<td>4</td>
<td>5</td>
<td>6</td>
</tr>
</tbody>
</table>
