crates/carta/tests/snapshots/golden_e2e__tsv__commonmark__spaces.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<table>
<thead>
<tr>
<th>word</th>
<th>has spaces</th>
</tr>
</thead>
<tbody>
<tr>
<td>foo bar</td>
<td>baz qux</td>
</tr>
</tbody>
</table>
